tests/correctness/reject/unknown_method_2.keel
def main(sys: System); Io:
    x = 5
    println(x.no_such_method())
